<?xml version="1.0"?>
<package>
  <name>nostop_analysis</name>
  <version>0.0.0</version>
  <description>The nostop_analysis package</description>

  <maintainer email="nardi@mail.dm.unipi.it">simone</maintainer>

  <license>BNL</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
 
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>

  <export>

  </export>
</package>